[project]
name = "mazegen"
version = "0.1.0"
description = "A maze generator package for the Amazing project"
authors = [
    {name = "Diaae", email = "diaae@student.1337.ma"}
]
requires-python = ">=3.10"
readme = "README.md"
packages = [
	{include = "mazegen"}
]
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
